fix(Slider): move track line and its gap behind thumb

--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -4,7 +4,7 @@
   cursor: pointer;
   height: 16px;
   width: 16px;
-  border-radius: 50%;
+  border-radius: 2px;
   background: var(--color-beige);
   border: 1px solid var(--color-brown);
   transition: background 0.5s ease-in-out;
@@ -13,8 +13,9 @@
 @mixin track() {
   cursor: pointer;
   width: 100%;
-  height: 2px;
-  background: var(--color-brown);
+  height: 1px;
+  // background: var(--color-brown);
+  background: transparent;
 }
 
 .Slider {
@@ -49,15 +50,15 @@
       &::-webkit-slider-thumb {
         border-color: var(--color-black);
       }
-      &::-webkit-slider-runnable-track {
-        background: var(--color-black);
-      }
+      // &::-webkit-slider-runnable-track {
+      //   background: var(--color-black);
+      // }
       &::-moz-range-thumb {
         border-color: var(--color-black);
       }
-      &::-moz-range-track {
-        background: var(--color-black);
-      }
+      // &::-moz-range-track {
+      //   background: var(--color-black);
+      // }
     }
   }
 
@@ -74,24 +75,24 @@
 
   &::before {
     $steps: 16;
-    $barHeight: 3px;
+    $barHeight: 1px;
     $barWidth: 2px;
 
     content: '';
     pointer-events: none;
     display: block;
     position: absolute;
-    top: ($sliderHeight - $barHeight) / 2;
+    z-index: -1;
+    top: ($sliderHeight - $barHeight) / 2 + 1px;
     left: 7px;
     width: calc(100% - 14px);
     height: $barHeight;
-    z-index: 1;
     background: repeating-linear-gradient(
       90deg,
       var(--color-beige),
       var(--color-beige) $barWidth,
-      transparent $barWidth,
-      transparent calc((100% - $barWidth) / ($steps - 1))
+      var(--color-brown) $barWidth,
+      var(--color-brown) calc((100% - $barWidth) / ($steps - 1))
     );
   }
 }
